- align the text of the Message - remove all Messages when resetting stuff (fix, quitting the game when the message of game over is on (telling to press enter to restart)) - after the first collide, make the body not collidable anymore - fix, firing a bullet once the game starts, due to the click from selecting the 'start game' entry in the main menu

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body
     {
     position: absolute;
     font-size: 1.5em;
+    text-align: center;
     cursor: default;
     }
 
